--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,30 @@
 .App {
   display: flex;
   justify-content: center;
-  background: #fafafa;
+  background: #66CCFF;
+  min-height: 100vh
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*Transpole*/
+
+.choose-line-button {
+  font-size: 18px;
+  padding: 5px 30px;
+  margin: 2px;
+  transform: skew(-30deg);
+  border: 0;
+  outline: none;
+}
+
+.choose-line-title {
+  transform: skew(30deg);
+}
+
+.choose-line-active {
+  transform: skew(-30deg) scale(1, 1.15);
 }
