--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 .App {
   display: flex;
   justify-content: center;
-  background: #66CCFF;
+  background: #3a7bd5;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3a6073, #3a7bd5);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3a6073, #3a7bd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   min-height: 100vh
 }
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 300px;
 }
 
 /*Transpole*/
@@ -16,15 +19,29 @@
   font-size: 18px;
   padding: 5px 30px;
   margin: 2px;
-  transform: skew(-30deg);
+  /*transform: skew(-30deg);*/
   border: 0;
   outline: none;
 }
 
-.choose-line-title {
-  transform: skew(30deg);
+.choose-line-active {
+  /*transform: skew(-30deg) scale(1, 1.15);*/
+  transform: scale(1, 1.15);
 }
 
-.choose-line-active {
-  transform: skew(-30deg) scale(1, 1.15);
+.choose-line-title {
+  /*transform: skew(30deg);*/
+}
+
+
+/*PlaqueTranspole.js*/
+
+.plaque-timetable-footer {
+  border-top: 1px solid #dddddd;
+  text-align: center;
+}
+
+.rappel {
+  font-size: 12px;
+  background-color: yellow;
 }
